--- a/src/stylesheet/main.scss
+++ b/src/stylesheet/main.scss
@@ -4,10 +4,27 @@ $font-family: "Poppins", sans-serif;
 
 #app {
   display: grid;
-  grid-template-columns: 224px 1fr 1fr;
+  grid-template-columns: 224px 385px 3fr;
+  grid-template-rows: 131px 100vh;
   font-family: $font-family;
 
+  #brand {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    list-style: none;
+    text-align: center;
+
+    width: auto;
+    margin: 0px;
+    padding: 8% 0% 0% 0%;
+
+    box-shadow: 0px 4px 13px rgba(202, 202, 202, 0.25);
+
+  }
+
   #nav {
+    grid-column: 1;
+    grid-row: 2;
     max-width: 224px;
     max-height: 100vh;
 
@@ -19,14 +36,6 @@ $font-family: "Poppins", sans-serif;
 
       padding: 0px;
       margin: 0px;
-    }
-
-    #nav-brand {
-      width: auto;
-      padding: 30% 0% 30% 0%;
-
-      box-shadow: 0px 4px 13px rgba(202, 202, 202, 0.25);
-
     }
 
     #nav-menu {
@@ -42,6 +51,10 @@ $font-family: "Poppins", sans-serif;
 
       li {
         display: block;
+
+        i {
+          font-size: 25px;
+        }
       }
 
       #cercle {
@@ -54,7 +67,11 @@ $font-family: "Poppins", sans-serif;
   }
 
   #block-card {
+    grid-column: 2;
+    grid-row: 2;
     max-width: 80vh;
     max-height: 100vh;
+
+    border-right: 2px solid rgba(211, 211, 211, 0.5);
   }
 }
