--- a/src/stylesheet/main.scss
+++ b/src/stylesheet/main.scss
@@ -55,6 +55,20 @@ $font-family: "Poppins", sans-serif;
 
         i {
           font-size: 25px;
+
+          filter: drop-shadow(0px 10px 16px rgba(89, 89, 89, 0.29));
+        }
+
+        a {
+          text-decoration: none;
+
+          font-family: $font-family;
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 36px;
+
+          color: #656565;
+
         }
       }
 
